--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - microservices-net
+
   # Инфраструктура: Брокер сообщений
   rabbitmq:
     image: rabbitmq:3.13-management
@@ -81,7 +82,9 @@ services:
 
   # Микросервисы
   analytics-service:
-    build: ./analytics-service
+    build:
+      context: .
+      dockerfile: ./analytics-service/Dockerfile
     ports:
       - "8081:8081"
     environment:
@@ -93,7 +96,9 @@ services:
       - microservices-net
 
   notification-service:
-    build: ./notification-service
+    build:
+      context: .
+      dockerfile: ./notification-service/Dockerfile
     ports:
       - "8083:8083"
     environment:
@@ -106,7 +111,9 @@ services:
       - microservices-net
 
   board-game-tournaments-schedule-service:
-    build: ./board-game-tournaments-schedule-service
+    build:
+      context: .
+      dockerfile: ./board-game-tournaments-schedule-service/Dockerfile
     ports:
       - "8082:8082"
       - "9091:9090"
@@ -120,7 +127,9 @@ services:
       - microservices-net
 
   board-game-tournaments-gateway:
-    build: ./board-game-tournaments-gateway
+    build:
+      context: .
+      dockerfile: ./board-game-tournaments-gateway/Dockerfile
     ports:
       - "8080:8080"
     environment:
